added "same types cant touch"

--- a/Frontend/catan-generator/src/app/app.component.html
+++ b/Frontend/catan-generator/src/app/app.component.html
@@ -61,7 +61,7 @@
       </div>
       <div class="checkbox-container">
         <label>
-          <input type="checkbox" id="sameResources" [(ngModel)]="sameResources" [ngModelOptions]="{standalone: true}"/>
+          <input type="checkbox" id="sameTypes" [(ngModel)]="sameTypes" [ngModelOptions]="{standalone: true}"/>
           <span class="custom-checkbox"></span>
           Same Resource Can Touch
         </label>
